[gd_scene load_steps=10 format=2]

[ext_resource path="res://image/body.png" type="Texture" id=1]
[ext_resource path="res://Bot.gd" type="Script" id=2]
[ext_resource path="res://ComponentParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://fade_gradient.tres" type="Texture" id=4]
[ext_resource path="res://image/turret.png" type="Texture" id=5]
[ext_resource path="res://ParticlesGroup.gd" type="Script" id=6]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.1

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = ExtResource( 4 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 32, 2, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0, 0, 0, 1 )
color_ramp = ExtResource( 4 )

[node name="Bot" type="RigidBody2D"]
physics_material_override = SubResource( 1 )
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
linear_damp = 10.0
angular_damp = 10.0
script = ExtResource( 2 )
COMPONENTS = ExtResource( 3 )

[node name="HullSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HullCollisionPolygon" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 30, -14, 32, -14, 32, 14, 30, 14, 30, 16, -30, 16, -30, 14, -32, 14, -32, -14, -30, -14, -30, -16, 30, -16 )

[node name="TurretSprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 0, -0.5 )

[node name="FiringRayCast" type="RayCast2D" parent="TurretSprite"]
enabled = true
cast_to = Vector2( 1000, 0 )

[node name="FiringParticles" type="Particles2D" parent="TurretSprite"]
show_behind_parent = true
position = Vector2( 24, 0 )
emitting = false
amount = 20
lifetime = 0.1
one_shot = true
explosiveness = 0.5
randomness = 1.0
local_coords = false
process_material = SubResource( 3 )

[node name="TrackParticles" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="LeftTrackParticles" type="Particles2D" parent="TrackParticles"]
position = Vector2( 0, -12 )
z_index = -1
amount = 1000
lifetime = 10.0
local_coords = false
process_material = SubResource( 2 )

[node name="RightTrackParticles" type="Particles2D" parent="TrackParticles"]
position = Vector2( 0, 12 )
z_index = -1
amount = 1000
lifetime = 10.0
local_coords = false
process_material = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
